[gd_scene load_steps=51 format=3 uid="uid://cum8y1srdk0pm"]

[ext_resource type="Texture2D" uid="uid://ce13vbl5b6e60" path="res://art/tutorial AI/AI_idle_anim.png" id="1_0hb22"]
[ext_resource type="Texture2D" uid="uid://brk3y7g5v8vof" path="res://art/tutorial AI/AI_speaking_anim.png" id="2_2ibxv"]
[ext_resource type="Texture2D" uid="uid://jlxsc2b0wcmd" path="res://art/tutorial AI/AI_active_text_bubble.png" id="3_yhvd1"]
[ext_resource type="Script" path="res://UI/AI_Tutorial_Text.gd" id="4_kj0ql"]
[ext_resource type="AudioStream" uid="uid://dqgvlt0t1dms4" path="res://audio/sfx/TutorialAIVoice/a.ogg" id="5_14dik"]
[ext_resource type="AudioStream" uid="uid://dqfhefete4m1n" path="res://audio/sfx/TutorialAIVoice/e.ogg" id="6_asr5m"]
[ext_resource type="AudioStream" uid="uid://d2x7io7xxsmso" path="res://audio/sfx/TutorialAIVoice/i.mp3" id="7_kot6g"]
[ext_resource type="AudioStream" uid="uid://b8axfkxilde2f" path="res://audio/sfx/TutorialAIVoice/o.ogg" id="8_v5hu4"]
[ext_resource type="AudioStream" uid="uid://veae0p8uivbr" path="res://audio/sfx/TutorialAIVoice/u.ogg" id="9_1y1x8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8wqk5"]
atlas = ExtResource("1_0hb22")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_grsrb"]
atlas = ExtResource("1_0hb22")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnm21"]
atlas = ExtResource("1_0hb22")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l40s5"]
atlas = ExtResource("1_0hb22")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_07ydy"]
atlas = ExtResource("1_0hb22")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qknn1"]
atlas = ExtResource("1_0hb22")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pykj"]
atlas = ExtResource("1_0hb22")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cq8n"]
atlas = ExtResource("1_0hb22")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i87xn"]
atlas = ExtResource("1_0hb22")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_74urv"]
atlas = ExtResource("1_0hb22")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg6yi"]
atlas = ExtResource("1_0hb22")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsciq"]
atlas = ExtResource("1_0hb22")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_56py6"]
atlas = ExtResource("1_0hb22")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4odby"]
atlas = ExtResource("1_0hb22")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkgy0"]
atlas = ExtResource("1_0hb22")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wlk7"]
atlas = ExtResource("1_0hb22")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_phpdb"]
atlas = ExtResource("1_0hb22")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_njk1b"]
atlas = ExtResource("1_0hb22")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fndp1"]
atlas = ExtResource("1_0hb22")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhxev"]
atlas = ExtResource("1_0hb22")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_amxpc"]
atlas = ExtResource("1_0hb22")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj6w4"]
atlas = ExtResource("1_0hb22")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5fvy"]
atlas = ExtResource("2_2ibxv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1gu6"]
atlas = ExtResource("2_2ibxv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfbsv"]
atlas = ExtResource("2_2ibxv")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_48yue"]
atlas = ExtResource("2_2ibxv")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogpmj"]
atlas = ExtResource("2_2ibxv")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lws7y"]
atlas = ExtResource("2_2ibxv")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_afqbp"]
atlas = ExtResource("2_2ibxv")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t8dn"]
atlas = ExtResource("2_2ibxv")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b42jk"]
atlas = ExtResource("2_2ibxv")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvpco"]
atlas = ExtResource("2_2ibxv")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jtqaj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wqk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grsrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnm21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l40s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07ydy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qknn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pykj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cq8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i87xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74urv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg6yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsciq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56py6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4odby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkgy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wlk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phpdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njk1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fndp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhxev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amxpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj6w4")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5fvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1gu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfbsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48yue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogpmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lws7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afqbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t8dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b42jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvpco")
}],
"loop": true,
"name": &"speaking",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xwpnr"]
atlas = ExtResource("3_yhvd1")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf7ri"]
atlas = ExtResource("3_yhvd1")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjnmd"]
atlas = ExtResource("3_yhvd1")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmoo7"]
atlas = ExtResource("3_yhvd1")
region = Rect2(384, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_0teyj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwpnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf7ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjnmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmoo7")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Theme" id="Theme_4cug2"]

[sub_resource type="SystemFont" id="SystemFont_v3t4e"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_bxtt3"]
streams_count = 5
stream_0/stream = ExtResource("5_14dik")
stream_0/weight = 1.0
stream_1/stream = ExtResource("6_asr5m")
stream_1/weight = 1.0
stream_2/stream = ExtResource("7_kot6g")
stream_2/weight = 1.0
stream_3/stream = ExtResource("8_v5hu4")
stream_3/weight = 1.0
stream_4/stream = ExtResource("9_1y1x8")
stream_4/weight = 1.0

[node name="Tutorial AI" type="Node2D"]
position = Vector2(4, -18)

[node name="AI_Tutorial_Text" type="Node" parent="."]
script = ExtResource("4_kj0ql")

[node name="Muse_AI" type="AnimatedSprite2D" parent="AI_Tutorial_Text"]
position = Vector2(0, -33)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_jtqaj")
animation = &"speaking"
frame_progress = 0.0981534

[node name="Text_Bubble" type="AnimatedSprite2D" parent="AI_Tutorial_Text"]
position = Vector2(107, -153)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_0teyj")
frame_progress = 0.0290046

[node name="Label" type="Label" parent="AI_Tutorial_Text"]
self_modulate = Color(0.835294, 0.537255, 0.647059, 1)
offset_left = 19.0
offset_top = -212.0
offset_right = 282.0
offset_bottom = -108.0
scale = Vector2(0.665, 0.665)
size_flags_stretch_ratio = 1.05
theme = SubResource("Theme_4cug2")
theme_override_fonts/font = SubResource("SystemFont_v3t4e")
text = "\"Use the levers [A] and [D] to move 
containers left and right!
The [,] button allows you to rotate
 those and [SPACE] places them!\""
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="next_message" type="Timer" parent="AI_Tutorial_Text"]

[node name="next_char" type="Timer" parent="AI_Tutorial_Text"]

[node name="AI_Speech_SFX" type="AudioStreamPlayer2D" parent="AI_Tutorial_Text"]
stream = SubResource("AudioStreamRandomizer_bxtt3")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -68)
offset = Vector2(66.595, 0)

[connection signal="timeout" from="AI_Tutorial_Text/next_message" to="AI_Tutorial_Text" method="_on_next_message_timeout"]
[connection signal="timeout" from="AI_Tutorial_Text/next_char" to="AI_Tutorial_Text" method="_on_next_char_timeout"]
